[tool.poetry]
name = "cortex-python"
version = "6.4.0"
description = "Python module for the Tecnotree Sensa Platform"
authors = ["Tecnotree <support@tecnotree.com>"]
readme = "README.md"
packages = [{include='./*.py'}]
[tool.poetry.dependencies]
python = "^3.11"
requests = ">=2.31.0,<3,"
requests-toolbelt = ">=1.0.0,"
pyyaml = ">=5.4.1,"
python-dateutil = ">=2.8.2,<3,"
python-jwt = ">=3.3.5,<4.0,"
cuid = ">=0.4,<1,"
dill = ">=0.3.6,"
matplotlib= { version=">2.2.2,<3", optional=true}
seaborn = { version=">0.9.0,<0.10", optional=true}
pandas = { version="<3", optional=true}
ipython = { version=">=6.4.0,<7", optional=true}
maya={ version=">=0.5.0", optional=true}
jinja2={ version="<4", optional=true}
# TODO Consider using mlflow-skinny ?
mlflow={ version=">1", optional=true}

[tool.poetry.group.dev.dependencies]
setuptools = "^69.2.0"
tox = ">=3.0,<4.0"
twine = ">=3.0,<4.0"
wheel = "^0.43.0"
requests-mock = ">=1.10.0"
pipdeptree = "^2.16.1"
pytest = ">=7.2.1,<8"
pylint = ">=2.16.1,<3"
pytest-html = ">=3.2.0,<4"
pytest-cov = ">=4.0.0,<5.0.0"
cuid = "^0.4"
black = ">=22.6.0,<24"
sphinx = "^7.2.6"
gitpython = "^3.1.42"
sphinx-multiversion = "^0.2.4"
sphinx-rtd-theme = "^2.0.0"
sphinxcontrib-restbuilder = "^0.3"

[tool.poetry.extras]
viz = ["matplotlib", "seaborn", "pandas"]
jupyter = ["ipython", "maya", "jinja2"]
mlflow = ["mlflow"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
